<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>swt_browser_sample</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <!--
        To find latest SWT maven:
        https://search.maven.org/search?q=a:org.eclipse.swt.win32.win32.x86_64
        search by date.
    -->

    <description>Sample cross-platform SWT browser example</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <swt_artifactId>org.eclipse.swt.win32.win32.x86_64</swt_artifactId> <!-- Overwritten by Profiles -->
        <swt_version>3.121.0</swt_version>        <!-- 3.116.100, 3.117.0, 3.118.0, 3.121-->

        <chromium_artifact>org.eclipse.swt.browser.chromium.win32.win32.x86_64</chromium_artifact>
        <chromium_version>3.116.0</chromium_version>
        <jcef-natives></jcef-natives>
        <jcef-natives-version></jcef-natives-version>
        <main.class>org.example.swt_browser_sample.SWTBrowserExample</main.class>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    </properties>




    <profiles>

        <profile>
            <id>Win64</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <swt_artifactId>org.eclipse.swt.win32.win32.x86_64</swt_artifactId>
                <app_jar>win_x86_64</app_jar>
                <chromium_artifact>org.eclipse.swt.browser.chromium.win32.win32.x86_64</chromium_artifact>
                <jcef-natives>jcef-natives-windows-amd64</jcef-natives>
                <jcef-natives-version>jcef-544024e+cef-95.7.14+g9f72f35+chromium-95.0.4638.69</jcef-natives-version>
            </properties>
        </profile>

        <profile>
            <id>Mac_x86_64</id>
            <activation>
                <os>
                    <family>mac</family>
                    <arch>x86_64</arch>
                </os>
            </activation>
            <properties>
                <swt_artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt_artifactId>
                <app_jar>mac_x86_64</app_jar>
            </properties>

        </profile>
        <profile>
            <id>Mac_aarch64</id>
            <activation>
                <os>
                    <family>mac</family>
                    <arch>aarch64</arch>
                </os>
            </activation>
            <properties>
                <swt_artifactId>org.eclipse.swt.cocoa.macosx.aarch64</swt_artifactId>
                <app_jar>mac_aarch64</app_jar>
            </properties>

        </profile>
        <profile>
            <id>Linux</id>
            <activation>
                <os>
                    <family>unix</family>
                    <name>Linux</name>
                </os>

            </activation>
            <properties>
                <swt_artifactId>org.eclipse.swt.gtk.linux.x86_64</swt_artifactId>
                <app_jar>gtk_x86_64</app_jar>
                <jcef-natives>jcef-natives-linux-arm64</jcef-natives>
                <jcef-natives-version>jcef-a51ff7f+cef-95.7.14+g9f72f35+chromium-95.0.4638.69</jcef-natives-version>
            </properties>
        </profile>

    </profiles>


    <dependencies>
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>${swt_artifactId}</artifactId>
            <version>${swt_version}</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>

    </dependencies>
    <build>
        <directory>target</directory>
        <outputDirectory>target/classes</outputDirectory>
        <finalName>${project.artifactId}</finalName>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>

        <plugins>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>java.desktop</arg>
                    </compilerArgs>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <appendAssemblyId>true</appendAssemblyId>

                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>

                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                        <manifestEntries>
                            <Main-Class>${main.class}</Main-Class>
                            <Application-Name>BrowserSample</Application-Name>
                            <Build-Date>${maven.build.timestamp}</Build-Date>
                        </manifestEntries>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <appendAssemblyId>true</appendAssemblyId>
                            <finalName>${app_jar}</finalName>
                            <attach>true</attach>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>



</project>

